# cli

./: .gitignore  .releaserc.json  CHANGELOG.md  CLIKD_CLI_PLAN.md  CLIKD_INIT_ANALYSIS.md  CONTRIBUTING.md  Cargo.toml  README.md  RELEASE_MANAGEMENT_IMPLEMENTATION.md  SECURITY.md  SECURITY_PATH_HANDLING.md  changelog-implementation-plan.md  changelog-integration-plan.md  clikd.toml  config.example.yaml  cranko.md  debug_template.md  dist-workspace.toml  go.mod  go.sum  golm-readme.md  justfile  moon.yml  plan.md
.chglog/: config.yml
.cursor/rules/: cli_structure.mdc
.github/: dependabot.yml
.github/workflows/: changelog-generation.yml  changelog-tests.yml  ci.yml  go-test.yml  package-managers.yml  release.yml  semantic-release.yml  update-scoop.yml
clikd/: config.toml
clikd/changelog/: CHANGELOG.tpl.md  config.yml
clikd/templates/: changelog.md
clikd/templates/changelog/: github.md
cmd/clikd/: main.go  main_test.go
config/: default.toml  images.Dockerfile
docs/: GITHUB_APP_PLAN.md  PR_WORKFLOW_PLAN.md  architecture.md  cache-sizing.md  changelog-integration-plan.md  configuration-strategy.md  configuration.mdx  meta.json  quick-start.mdx  what-is-clikd.mdx
docs/ai-integration/: index.mdx  meta.json
docs/commands/: index.mdx  init.mdx  meta.json
internal/ai/: changelog.go  config.go
internal/changelog/: ai_integration.go  chglog.go  chglog_test.go  config.go
internal/cli/version/: version.go  version_test.go
internal/config/: config.go  config_test.go  defaults.go  loader.go  types.go  validation.go
internal/services/: factory.go  factory_test.go
internal/services/ai/: README.md  client.go  client_test.go  config.go  gollm.go  mock_client_test.go  service.go  service_test.go
internal/services/changelog/: README.md  builder.go  chglog.go  chglog_test.go  config.go  config_builder.go  config_builder_mock.go  config_builder_test.go  config_loader.go  config_loader_mock.go  config_test.go  context.go  custom_template_builder.go  custom_template_builder_test.go  errors.go  fs.go  fs_mock.go  generator.go  generator_mock.go  jira.go  jira_test.go  kac_template_builder.go  kac_template_builder_test.go  previews.go  processor.go  processor_factory.go  processor_factory_test.go  processor_test.go  questioner.go  service.go  status_code.go  template_builder.go  template_builder_mock.go  types.go  utils.go  utils_test.go  validation.go  variables.go  variables_test.go
internal/services/git/: README.md  client.go  commit_extractor.go  commit_filter.go  commit_parser.go  commit_parser_test.go  errors.go  fields.go  service.go  service_test.go  tag_reader.go  tag_selector.go
internal/services/update/: README.md  checker.go  checker_test.go  debug_test.go
internal/ui/bubble/: changelog_viewer.go  confirm.go  input.go  input_test.go  preview.go  progress.go  select.go  select_test.go  update_notifier.go
internal/ui/styles/: styles.go  styles_test.go  update.go  update_test.go
internal/utils/: apikey.go  apikey_test.go  changelog_utils.go  changelog_utils_test.go  gitutils.go  gitutils_test.go  logger.go  logger_test.go
models/initialize/: handlers.go  init_model.go  messages.go  project_structure.go  views.go
pkg/ai/: azure.go  client.go  config.go  config_test.go  gollm.go  local.go  mistral.go  mock_client_test.go  openai.go
pkg/commands/changelog/: README.md  ai.go  cmd.go  helpers.go  helpers_test.go
pkg/commands/hello/: hello.go
pkg/commands/initialize/: cmd.go  ui.go
pkg/commands/root/: README.md  root.go
pkg/commands/ui/: cmd.go
pkg/config/: config.go  config_test.go  defaults.go  loader.go  types.go
pkg/internal/changelog/: ai_config.yaml.example  ai_integration.go  chglog.go  chglog_test.go  commit_extractor.go  commit_extractor_test.go  commit_filter.go  commit_filter_test.go  commit_parser.go  commit_parser_test.go  docs.go  errors.go  example_test.go  fields.go  jira.go  jira_test.go  logger.go  logger_test.go  logger_wrapper.go  processor.go  processor_test.go  tag_reader.go  tag_reader_test.go  tag_selector.go  tag_selector_test.go  utils.go
pkg/ui/: styles.go
pkg/ui/components/: confirm.go  input.go  list.go  multiselect.go  progress.go  select.go
pkg/ui/demo/: demo.go  term_unix.go  term_windows.go
pkg/utils/: apikey.go  logger.go
src/: cli.rs  config.rs  error.rs  lib.rs  main.rs  utils.rs
src/cmd/: ai.rs  auth.rs  completions.rs  db.rs  init.rs  logs.rs  start.rs  status.rs  stop.rs  update.rs
src/cmd/release/: graph.rs  init.rs  prepare.rs  status.rs
src/commands/: mod.rs  selector.rs
src/config/: mod.rs
src/core/: root.rs  status.rs  ui.rs
src/core/ai/: changelog.rs  client.rs  credentials.rs
src/core/auth/: github.rs  org_check.rs  token.rs
src/core/config/: images.rs  loader.rs  types.rs  version_manager.rs
src/core/docker/: health.rs  manager.rs  network.rs  registry.rs  services.rs
src/core/ecosystem/: cargo.rs  csproj.rs  elixir.rs  go.rs  npm.rs  pypa.rs  swift.rs
src/core/git/: branch.rs  clikd_utils.rs  cranko_utils.rs  gitignore.rs
src/core/github/: client.rs
src/core/ide/: intellij.rs  vscode.rs
src/core/release/: changelog.rs  changelog_generator.rs  commit_analyzer.rs  config.rs  dynfmt.rs  errors.rs  graph.rs  manifest.rs  pr_generator.rs  project.rs  repository.rs  repository_tests.rs  rewriters.rs  session.rs  template.rs  version.rs  workflow.rs
src/core/start/: runner.rs
src/core/status/: app_data.rs  app_error.rs  config.rs  docker_data.rs  exec.rs  input_handler.rs  reporter.rs  ui.rs
src/core/stop/: runner.rs
src/core/ui/: markdown.rs  (+3 more)
src/git/: mod.rs
src/utils/: retry.rs  terminal.rs  theme.rs  version_check.rs
taskmaster-scripts/: prd.txt
templates/: apisix-routes.yaml  config.toml  intellij-clikd.xml  vscode-extensions.json  vscode-settings.json
tests/: common.rs  test_changelog.rs  test_dependency_graph.rs  test_dirty_repository.rs  test_ecosystem_edge_cases.rs  test_github.rs  test_project_detection.rs  test_release_init.rs  test_release_prepare.rs  test_security.rs  test_version_bump.rs
tests/fixtures/: .gitignore
wix/: main.wxs
(+281 files in other folders)
