[package]
name = "clikd"
version = "0.3.0"
description = "Local development environment management for Clikd"
authors = ["Clikd, Inc <devops@clikd.com>"]
edition = "2021"
rust-version = "1.91"
license = "MIT"
homepage = "https://github.com/clikd-inc/cli"
repository = "https://github.com/clikd-inc/cli"

[features]
default = []
csharp = []

[package.metadata.wix]
upgrade-guid = "4A39E689-B0D6-4AB9-8959-FE75CD47AE52"
path-guid = "228E8725-1150-4D3E-9CCF-308757610651"
license = false
eula = false

[[bin]]
name = "clikd"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "env", "wrap_help", "cargo"] }
clap_complete = "4.5"

anyhow = "1.0"
thiserror = "2.0"

log = "0.4"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

owo-colors = { version = "4.2", features = ["supports-colors"] }
spinoff = { version = "0.8", features = ["arc"] }
kdam = { version = "0.6", features = ["gradient", "rich", "spinner"] }
dialoguer = "0.12"
open = "5.3"

ratatui = "0.29"
crossterm = { version = "0.29", features = ["event-stream"] }
color-eyre = "0.6"

config = "0.15.18"
configparser = "3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_jsonc = "1.0.108"
toml = "0.9.8"
dirs = "6.0"
minijinja = "2.5"

bollard = "0.19.3"
git2 = "0.20.2"
regex = "1.11"
once_cell = "1.20"
semver = "1.0"

keyring = { version = "3.6.3", features = ["apple-native", "windows-native", "linux-native"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "blocking"] }
ureq = { version = "3.1.2", features = ["json"] }
json = "0.12"
secrecy = "0.10.3"
zeroize = "1.8"

tokio = { version = "1.40", features = ["rt-multi-thread", "macros", "fs"] }
tokio-util = "0.7"
futures = "0.3"
futures-util = "0.3"
parking_lot = "0.12"

chrono = "0.4"
jiff = "0.2.16"
uuid = { version = "1.0", features = ["v4"] }
cansi = "2.2"
directories = "6.0"

# Release Management Dependencies (from Cranko)
cargo_metadata = "0.18"
toml_edit = "0.22"
petgraph = "0.6"
atomicwrites = "0.4"
nom = "7"
quick-xml = "0.36"
json5 = "0.4"
lru = "0.12"
git-url-parse = "0.4"
percent-encoding = "2"
target-lexicon = "0.12"
textwrap = "0.16"
base64 = "0.22"
flate2 = "1.0"
tar = "0.4"
zip = { version = "2.2", default-features = false, features = ["deflate", "time"] }
ci_info = "0.14"
lazy_static = "1.4"
dynfmt = { version = "0.1", default-features = false, features = ["curly"] }

[dev-dependencies]
trycmd = "0.15"
assert_cmd = "2.0"
assert_fs = "1.1"
tempfile = "3.8"
insta = "1.34"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dist]
inherits = "release"
lto = "thin"
