[package]
name = "clikd"
version = "0.5.1"
description = "Local development environment management for Clikd"
authors = ["Clikd, Inc <devops@clikd.com>"]
edition = "2021"
rust-version = "1.91"
license = "MIT"
homepage = "https://github.com/clikd-inc/cli"
repository = "https://github.com/clikd-inc/cli"

[features]
default = []
csharp = []
ai = []

[package.metadata.wix]
upgrade-guid = "4A39E689-B0D6-4AB9-8959-FE75CD47AE52"
path-guid = "228E8725-1150-4D3E-9CCF-308757610651"
license = false
eula = false

[[bin]]
name = "clikd"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "env", "wrap_help", "cargo"] }
clap_complete = "4.5"

anyhow = "1.0"
thiserror = "2.0"

log = "0.4"
tracing = "0.1.43"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

owo-colors = { version = "4.2", features = ["supports-colors"] }
spinoff = { version = "0.8", features = ["arc"] }
kdam = { version = "0.6", features = ["gradient", "rich", "spinner"] }
dialoguer = "0.12"
open = "5.3"

ratatui = "0.29"
crossterm = { version = "0.29", features = ["event-stream"] }
color-eyre = "0.6"
pulldown-cmark = "0.13.0"

config = "0.15.19"
configparser = "3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_jsonc = "1.0.108"
toml = "0.9.8"
dirs = "6.0"
minijinja = "2.13"

bollard = "0.19.3"
git2 = "0.20.2"
regex = "1.11"
once_cell = "1.20"
semver = "1.0"

keyring = { version = "3.6.3", features = ["apple-native", "windows-native", "linux-native"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "blocking"] }
octocrab = "0.48.1"
ureq = { version = "3.1.2", features = ["json"] }
secrecy = "0.10.3"
zeroize = "1.8"

tokio = { version = "1.40", features = ["rt-multi-thread", "macros", "fs"] }
tokio-util = "0.7"
futures = "0.3"
futures-util = "0.3"
parking_lot = "0.12"

time = { version = "0.3", features = ["local-offset", "formatting", "macros"] }
jiff = "0.2.16"
uuid = { version = "1.19", features = ["v4"] }
cansi = "2.2"
directories = "6.0"

# Release Management Dependencies
cargo_metadata = "0.23.1"        # Parse Cargo.toml metadata for Rust projects
toml_edit = "0.23.7"             # Preserve-formatting TOML editing for version bumps
petgraph = "0.8.3"               # Dependency graph for monorepo release ordering
git-conventional = "0.12"        # Parse conventional commits (feat, fix, BREAKING)
next_version = "0.2"             # Calculate semantic version bumps from commits
atomicwrites = "0.4"           # Atomic file writes to prevent corruption
nom = "8.0.0"                      # Parser combinators for Python setup.py parsing
quick-xml = "0.38.4"             # XML parsing for C# .csproj files
json5 = "1.0.0"                  # Relaxed JSON parsing for package.json with comments
lru = "0.16.2"                   # LRU cache for parsed project metadata
git-url-parse = "0.6.0"          # Parse Git URLs for GitHub release integration
percent-encoding = "2"         # URL encoding for Git URLs and API calls
target-lexicon = "0.13.3"        # Platform target detection for cross-platform support
textwrap = "0.16"              # Text wrapping for changelog formatting
base64 = "0.22"                # Base64 encoding for GitHub API, PKCE
sha2 = "0.10"                  # SHA256 for OAuth PKCE code challenge
rand = "0.9"                   # Random string generation for OAuth state/verifier
urlencoding = "2.1"            # URL encoding for OAuth parameters
ci_info = "0.14"               # CI environment detection (GitHub Actions, etc.)
ref-cast = "1.0"               # Safe repr(transparent) reference casting

[dev-dependencies]
trycmd = "0.15"
assert_cmd = "2.0"
assert_fs = "1.1"
tempfile = "3.8"
insta = "1.44"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dist]
inherits = "release"
lto = "thin"

# =============================================================================
# RUST COMPILER LINTS
# =============================================================================
[lints.rust]
# Safety
unsafe_code = "warn"                           # Warn about unsafe code usage
unsafe_op_in_unsafe_fn = "warn"                # Edition 2024 default - require unsafe blocks in unsafe fns

# Naming conventions (rustc lints, not clippy!)
non_snake_case = "warn"
non_camel_case_types = "warn"

# =============================================================================
# CLIPPY LINTS
# =============================================================================
[lints.clippy]

# -----------------------------------------------------------------------------
# Lint Groups (lower priority so individual lints can override)
# -----------------------------------------------------------------------------
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

# -----------------------------------------------------------------------------
# Module Organization
# -----------------------------------------------------------------------------
mod_module_files = "forbid"                    # Bans mod.rs files - enforces foo.rs + foo/ style
wildcard_imports = "forbid"                    # No glob imports (use xxx::* forbidden)
enum_glob_use = "forbid"                       # No enum wildcard imports
single_component_path_imports = "warn"         # Prefer full paths over single component
module_name_repetitions = "warn"               # Warns about foo::foo_bar style names

# -----------------------------------------------------------------------------
# Code Quality & Safety (Restriction Lints)
# -----------------------------------------------------------------------------
todo = "warn"                                  # Flag TODO comments
dbg_macro = "warn"                             # No dbg!() in production
print_stdout = "warn"                          # No println!/print! in library code
print_stderr = "warn"                          # No eprintln!/eprint! in library code
unimplemented = "warn"                         # No unimplemented!() macro
panic = "warn"                                 # Warns about explicit panic!() calls
unwrap_used = "warn"                           # Prefer proper error handling over .unwrap()
expect_used = "warn"                           # Prefer proper error handling over .expect()
undocumented_unsafe_blocks = "warn"            # Require safety comments for unsafe blocks
allow_attributes = "warn"                      # Warns about #[allow] without reason

# -----------------------------------------------------------------------------
# Performance
# -----------------------------------------------------------------------------
needless_collect = "warn"                      # Avoid unnecessary .collect() calls
clone_on_copy = "warn"                         # Don't clone Copy types
inefficient_to_string = "warn"                 # Use more efficient string conversions
unnecessary_sort_by = "warn"                   # Simplify sort operations
redundant_clone = "warn"                       # Remove redundant .clone() calls
needless_pass_by_value = "warn"                # Prefer borrowing over moves when possible
clone_on_ref_ptr = "warn"                      # Prefer Arc::clone(&x) over x.clone()

# -----------------------------------------------------------------------------
# Error Handling & Documentation
# -----------------------------------------------------------------------------
large_enum_variant = "warn"                    # Warns about large enum variants (box them)
result_unit_err = "warn"                       # Prefer meaningful error types over ()
missing_errors_doc = "warn"                    # Document error conditions
missing_panics_doc = "warn"                    # Document panic conditions
doc_markdown = "warn"                          # Proper markdown formatting in docs

# -----------------------------------------------------------------------------
# API Design & Conventions
# -----------------------------------------------------------------------------
must_use_candidate = "warn"                    # Suggest #[must_use] for pure functions
wrong_self_convention = "warn"                 # Check self/&self/&mut self conventions
len_zero = "warn"                              # Use .is_empty() instead of len() == 0
new_without_default = "warn"                   # Implement Default when providing new()
should_implement_trait = "warn"                # Suggest implementing standard traits
fn_params_excessive_bools = "warn"             # Too many bool parameters

# -----------------------------------------------------------------------------
# Type Safety & Casts
# -----------------------------------------------------------------------------
cast_possible_truncation = "warn"              # Warns about potential data loss in casts
cast_possible_wrap = "warn"                    # Warns about integer overflow in casts
cast_lossless = "warn"                         # Prefer From trait over as casts
cast_sign_loss = "warn"                        # Warns about sign loss in casts
checked_conversions = "warn"                   # Use checked conversions (try_from)

# -----------------------------------------------------------------------------
# Concurrency & Async
# -----------------------------------------------------------------------------
await_holding_lock = "warn"                    # Don't hold locks across await points
await_holding_refcell_ref = "warn"             # Don't hold RefCell refs across await
future_not_send = "warn"                       # Ensure futures implement Send

# -----------------------------------------------------------------------------
# Maintainability & Complexity
# -----------------------------------------------------------------------------
cognitive_complexity = "warn"                  # Flag overly complex functions
too_many_arguments = "warn"                    # Functions with >7 parameters need refactoring
too_many_lines = "warn"                        # Flag excessively long functions
type_complexity = "warn"                       # Simplify overly complex type signatures

# -----------------------------------------------------------------------------
# Boolean Logic & Pattern Matching
# -----------------------------------------------------------------------------
match_bool = "warn"                            # Simplify match on bool to if-else
bool_comparison = "warn"                       # No `if x == true`, just `if x`
if_same_then_else = "warn"                     # Identical if/else blocks need merging
zero_sized_map_values = "warn"                 # Warns about Map<K, ()> (use Set instead)

# -----------------------------------------------------------------------------
# Naming
# -----------------------------------------------------------------------------
upper_case_acronyms = "warn"                   # Acronyms should be CamelCase (e.g., HttpUrl)

# -----------------------------------------------------------------------------
# Pedantic Overrides (allow some overly strict pedantic lints if needed)
# -----------------------------------------------------------------------------
# Uncomment to reduce noise during early development:
# missing_errors_doc = "allow"
# missing_panics_doc = "allow"
# module_name_repetitions = "allow"
